# g-xtb-ase

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: spectroscopy.py  water.py
gxtb_ase/: __init__.py  calculator.py
